2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Remove debug
	* libgsm/phonemgr-listener.c (phonemgr_listener_list_all_data):
	Fixed another wrongly placed g_mutex_unlock()

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Add support for setting the type
	of data required on the command-line

	* libgsm/phonemgr-listener.c
	(phonemgr_listener_set_cell_notification): Fix valgrind warning
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data):
	Add start of support for CALENDAR data in list_all_data, fix
	spurious mutex unlock in the get_data code

	* libgsm/phonemgr-utils.c (phonemgr_utils_connect): Fix some
	more valgrind warnings

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_connect),
	(phonemgr_listener_get_phonebook_entry),
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data):
	Fix problem with phonebooks entries not being all consecutive

	* libgsm/phonemgr-listener.h: Fix a warning

	* configure.in: Require evolution-data-server in the backend as
	well

	* libgsm/glibgsmtest.c (main): Add options to make the debugging
	tool more flexible, add delete/add/list/put support

2008-06-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require evolution-data-server in the backend as
	well, so we can parse vCards
	* libgsm/phonemgr-utils.c (vcard_to_phonebook_entry):
	* libgsm/phonemgr-utils.h: vCard to phonebook entry parsing

	* libgsm/phonemgr-listener.c (phonemgr_listener_get_own_details),
	(phonemgr_listener_list_all_data),
	(phonemgr_listener_parse_data_uuid), (phonemgr_listener_get_data),
	(phonemgr_listener_delete_data), (phonemgr_listener_put_data):
	* libgsm/phonemgr-listener.h: Add _list_all_data, _get_data,
	_delete_data, and _put_data functions, that should be exported
	for Conduit's use (see #456259)

2008-06-16  Bastien Nocera  <hadess@hadess.net>
